// Copyright (C) 2012, All Rights Reserved.
// Author: Cory Maccarrone <darkstar6262@gmail.com>

message BackupSet {
  optional uint32 id = 1;
}

message BackupDescriptor {
  repeated BackupSet backup_sets = 1;
}

